Access to the classpath can also be given programmatically 'in code'